Deployments/treasury.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: treasury
  namespace: treasury
spec:
  replicas: 1
  selector:
    matchLabels:
      app: treasury
  template:
    metadata:
      labels:
        app: treasury
    spec:
      containers:
        - name: treasury
          image: ghcr.io/biestervictor/treasury:latest
          ports:
            - containerPort: 30800
---
apiVersion: v1
kind: Service
metadata:
  name: treasury-service
  namespace: treasury
spec:
  selector:
    app: treasury
  ports:
    - protocol: TCP
      port: 30800
      targetPort: 30800
  type: NodePort
