Deployments/mongodb_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongodb-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: mongodb.example.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: mongodb-service
                port:
                  number: 27017
