Deployments/mongoexpress_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongoexpress-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: mongoexpress.example.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: mongo-express-service
                port:
                  number: 8081
